--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "ts-node-dev --poll --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "prisma:dev": "prisma migrate deploy --name init && studio && npm run dev",
+    "s": "prisma studio",
+    "m": "prisma migrate dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.8.0",
     "@types/csv-parse": "^1.2.2",
     "csv-parse": "^5.3.3",
     "express": "^4.18.2",
@@ -21,6 +25,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/multer": "^1.4.7",
+    "@types/node": "^18.11.17",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
@@ -32,6 +37,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "prisma": "^4.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
