--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "csv-parse": "^5.3.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.6.0",
     "tsyringe": "^4.7.0",
     "uuid": "^9.0.0"
