--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.8.0",
-    "@types/csv-parse": "^1.2.2",
+    "bcrypt": "^5.1.0",
     "csv-parse": "^5.3.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.6.0",
@@ -25,7 +27,10 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.17",
     "@types/swagger-ui-express": "^4.1.3",
