--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,17 @@
     "module": "commonjs",                                /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-    // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
-    // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
+    // "baseUrl": "./src",                                  /* Specify the base directory to resolve non-relative module names. */
+    // "paths": {
+    //   "@modules/*": ["modules/*"],
+    //   "@config/*": ["config/*"],
+    //   "@shared/*": ["shared/*"],
+    //   "@errors/*": ["errors/*"],
+    //   "@routes/*": ["routes/*"],
+    //   "@utils/*": ["utils/*"],
+    //   "@middlewares/*": ["middlewares/*"],
+    //   "@libs/*": ["libs/*"],
+    // },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
