--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.6.0",
     "tsyringe": "^4.7.0",
-    "uuid": "^9.0.0"
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -34,8 +34,8 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.17",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
-    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "eslint": "^8.29.0",
