--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.8.0",
+    "@types/nodemailer": "^6.4.7",
     "bcrypt": "^5.1.0",
     "csv-parse": "^5.3.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.3.3",
     "swagger-ui-express": "^4.6.0",
-    "tsyringe": "^4.7.0",
-    "supertest": "^6.3.3"
+    "tsyringe": "^4.7.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
