--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@prisma/client": "^4.8.0",
     "@types/nodemailer": "^6.4.7",
+    "aws-sdk": "^2.1312.0",
     "bcrypt": "^5.1.0",
     "csv-parse": "^5.3.3",
     "express": "^4.18.2",
