--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.8.0",
-    "@types/nodemailer": "^6.4.7",
     "aws-sdk": "^2.1312.0",
     "bcrypt": "^5.1.0",
     "csv-parse": "^5.3.3",
@@ -23,6 +22,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
+    "mime": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "reflect-metadata": "^0.1.13",
@@ -36,8 +36,10 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.5",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/mime": "^3.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.17",
+    "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
