--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: postgres
     hostname: postgres
     restart: unless-stopped
+    # Change the first port to a random one at deployment
     ports:
       - 5432:5432
     environment:
@@ -24,17 +25,18 @@ services:
   #   ports:
   #     - 5431:5432
 
+  # For running the application in a container also
   # Important: Change localhost to postgres on .env first
-  app:
-    build: .
-    container_name: rentcar
-    depends_on:
-      - postgres
-    ports:
-      - '3333:3333'
-    volumes:
-      - .:/usr/app
-    restart: always
+  # app:
+  #   build: .
+  #   container_name: rentcar
+  #   depends_on:
+  #     - postgres
+  #   ports:
+  #     - '3333:3333'
+  #   volumes:
+  #     - .:/usr/app
+  #   restart: always
 
 
 volumes:
