--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ AWS_SECRET_ACCESS_KEY=storage_secret_key
 AWS_BUCKET=bucket_name
 AWS_BUCKET_URL="https://car-api-juliommen.s3.us-east-1.amazonaws.com"
 LOCAL_URL="http://localhost:3333/tmp"
+PWD_USER_ADMIN=
