--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^4.8.0",
     "aws-sdk": "^2.1312.0",
@@ -63,6 +66,7 @@
     "jest": "^29.3.1",
     "prisma": "^4.8.0",
     "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
