update api ssh-action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,18 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           source: "., !node_modules"
           target: "~/car-api"
+          
+      - name: Update API
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          port: ${{ secrets.SSH_PORT }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            cd ~/car-api
+            npm ci
+            npx prisma migrate deploy
+            pm2 restart car-api
 
   
