copy node_modules altogether

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
-          source: "., !node_modules"
+          source: "."
           target: "~/car-api"
           
       - name: Update API
@@ -38,7 +38,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd ~/car-api
-            npm ci
             npx prisma migrate deploy
             pm2 restart car-api
 
