included npx prisma generate

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,7 @@ jobs:
           script: |
             cd ~/car-api
             npx prisma migrate deploy
+            npx prisma generate
             pm2 restart car-api
 
   
