--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^4.8.0",
     "aws-sdk": "^2.1312.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "csv-parse": "^5.3.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -43,6 +44,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.5",
