rate limiter with redis

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ AWS_BUCKET=bucket_name
 AWS_BUCKET_URL="https://car-api-juliommen.s3.us-east-1.amazonaws.com"
 LOCAL_URL="http://localhost:3333/tmp"
 PWD_USER_ADMIN=
+EMAIL_USER_ADMIN=
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSOWRD=
