--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "csv-parse": "^5.3.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
@@ -30,6 +31,8 @@
     "mime": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
+    "rate-limiter-flexible": "^2.4.1",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.3",
     "swagger-ui-express": "^4.6.0",
@@ -53,6 +56,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.17",
     "@types/nodemailer": "^6.4.7",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
